// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<FormLogin /> should render 1`] = `
<DocumentFragment>
  .c3 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c0 {
  width: 250px;
  margin: 0 auto;
}

.c2 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
  margin: 10px 0;
}

.c1 {
  font-size: 20px;
  margin: 0;
  padding: 20px 0;
  text-align: center;
}

<form
    class="c0"
    data-testid="formLoginSubmit"
  >
    <h1
      class="c1"
    >
      Logue-se no Chat
    </h1>
    <input
      class="c2"
      data-testid="formLoginInput"
      placeholder="Digite seu nickname"
      required=""
      value=""
    />
    <button
      class="c3"
      type="submit"
    >
      Enviar
    </button>
  </form>
</DocumentFragment>
`;

exports[`<FormLogin /> should render with errorMessage 1`] = `
<DocumentFragment>
  .c3 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c5 {
  width: px;
  height: px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-size: 15px;
  padding: 10px 0;
}

.c4 svg {
  width: 20px;
  height: 20px;
}

.c6 {
  padding-left: 10px;
}

.c0 {
  width: 250px;
  margin: 0 auto;
}

.c2 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
  margin: 10px 0;
}

.c1 {
  font-size: 20px;
  margin: 0;
  padding: 20px 0;
  text-align: center;
}

<form
    class="c0"
    data-testid="formLoginSubmit"
  >
    <h1
      class="c1"
    >
      Logue-se no Chat
    </h1>
    <input
      class="c2"
      data-testid="formLoginInput"
      placeholder="Digite seu nickname"
      required=""
      value=""
    />
    <button
      class="c3"
      type="submit"
    >
      Enviar
    </button>
    <div
      class="c4"
    >
      <svg
        class="c5"
        focusable="false"
        role="img"
        viewBox="0 0 512 512"
      >
        <path
          d="M504 256c0 136.997-111.043 248-248 248S8 392.997 8 256C8 119.083 119.043 8 256 8s248 111.083 248 248zm-248 50c-25.405 0-46 20.595-46 46s20.595 46 46 46 46-20.595 46-46-20.595-46-46-46zm-43.673-165.346l7.418 136c.347 6.364 5.609 11.346 11.982 11.346h48.546c6.373 0 11.635-4.982 11.982-11.346l7.418-136c.375-6.874-5.098-12.654-11.982-12.654h-63.383c-6.884 0-12.356 5.78-11.981 12.654z"
          fill="currentColor"
        />
      </svg>
      <span
        class="c6"
      >
        Este usuário já existe
      </span>
    </div>
  </form>
</DocumentFragment>
`;

exports[`<FormLogin /> should render with onSubmit 1`] = `
<DocumentFragment>
  .c3 {
  width: 100%;
  font-weight: bold;
  -webkit-transition: all 0.2s ease-in 0s;
  transition: all 0.2s ease-in 0s;
  border: 0;
  cursor: pointer;
  outline: none;
}

.c0 {
  width: 250px;
  margin: 0 auto;
}

.c2 {
  padding: 15px 10px;
  width: calc(100% - 20px);
  border: 0;
  outline: none;
  margin: 10px 0;
}

.c1 {
  font-size: 20px;
  margin: 0;
  padding: 20px 0;
  text-align: center;
}

<form
    class="c0"
    data-testid="formLoginSubmit"
  >
    <h1
      class="c1"
    >
      Logue-se no Chat
    </h1>
    <input
      class="c2"
      data-testid="formLoginInput"
      placeholder="Digite seu nickname"
      required=""
      value=""
    />
    <button
      class="c3"
      type="submit"
    >
      Enviar
    </button>
  </form>
</DocumentFragment>
`;
